@@ -17,6 +17,7 @@
 - GWT: changed audio backend to WebAudio API. Now working on mobiles, pitch implemented. Configuration change: preferFlash removed. When updating existing projects, you can remove the soundmanager js files from your webapp folder and the references to it from index.html
 - GWT: added possibility to lazy load assets via AssetManager instead of preload them before game start. See GWT specifics wiki article for more information.
 - GWT: New configuration setting usePhysicalPixels to use native resolution on mobile / Retina / HDPI screens. When using this option, make sure to update your code in index.html and HTMLLauncher from setup template.
+- GWT: Assets in distribute build are renamed with md5 hash suffix to bypass browser cache on changes
 - Added support for Linux ARM builds.
 	- 32-bit: ARMv7/armhf
 	- 64-bit: ARMv8/AArch64
